Update release workflow to trigger on tags

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,10 +1,9 @@
 name: Release Obsidian plugin
 
 on:
-  workflow_dispatch:
   push:
-    branches:
-      - releases
+    tags:
+      - "*"
 
 jobs:
   build:
